# mal

./: .gitignore  JW-README.md  Makefile  Makefile.impls  README.md  devbox.json  jw-perf.sh  jw-test.sh
impls/jw-c/: Makefile  README.md
impls/jw-haskell/: .gitignore  Makefile  jw-haskell-mal.cabal  package.yaml  stack.yaml
impls/jw-python/: .gitignore  Makefile  README.md  requirements.txt  run  setup.cfg
impls/jw-racket/: Makefile  run
impls/jw-racket-br/: Makefile  README.md  run  step1_read_print.rkt
impls/jw-rust/: .gitignore  Cargo.toml  run
impls/jw-rust/src/: core.rs  env.rs  printer.rs  reader.rs  step0_repl.rs  step1_read_print.rs  step2_eval.rs  step3_env.rs  step4_if_fn_do.rs  step5_tco.rs  step6_file.rs  step7_quote.rs  step8_macros.rs  step9_try.rs  stepA_mal.rs  types.rs
impls/jw-swift/: .gitignore  .swiftlint.yml  Makefile  Package.swift  README.md  run
impls/jw-typed-racket/: .gitignore  Makefile  README.md  run
impls/jw_elixir/: .gitignore  Makefile  mix.exs  run  step0_repl.exs  step1_read_print.exs
jw-c/: Makefile  README.md  print_argv.mal  run  t  t2  test  test_all  tests  tt  tt1  tt2
jw-c/old/: step0_repl.c
jw-c/src/: core.c  core.h  core_atom.c  core_atom.h  core_atom_test.c  core_atom_test.h  core_is.c  core_is.h  core_is_test.c  core_is_test.h  core_mal.c  core_mal.h  core_mal_test.c  core_mal_test.h  core_misc.c  core_misc.h  core_misc_test.c  core_misc_test.h  core_num.c  core_num.h  core_num_test.c  core_num_test.h  core_seq.c  core_seq.h  core_seq_test.c  core_seq_test.h  core_test.c  core_test.h  debug.c  debug.h  env.c  env.h  env_test.c  env_test.h  escapes.c  (+58 more)
jw-haskell/: Makefile  README.md  jw-haskell-mal.cabal  mal.cabal  package.yaml  run  stack.yaml  step0_repl.hs
jw-python/: .flake8  Makefile  README.md  pylintrc  requirements.txt  setup.cfg  t.mal
jw-racket/: Makefile  README.md
jw-racket-br/: Makefile  README.md  run  step0_repl.rkt  step1_read_print.rkt  test.rkt
jw-swift/: .gitignore  .swiftlint.yml  README.md  parser_test.swift  run
jw_elixir/: .credo.exs  .gitignore  Makefile  README.md  mix.exs  run  step0_repl.exs  step1_read_print.exs  step2_eval.exs  step3_env.exs
(+290 files in other folders)
